# gptsql

./: .gitignore  README.md  env.example  pyproject.toml
gptsql/: __main__.py  func_tools.py  utils.py
