[tool.poetry]
name = "gptsql"
version = "0.1.4"
description = "LLM-powered chat interface to your Postgres database"
authors = ["Scott Persinger <scottpersinger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
halo = "^0.0.31"
sqlalchemy = "^2.0.23"
pandas = "^2.1.3"
openai = "^1.3.6"
psycopg2 = "^2.9.9"
prompt-toolkit = "^3.0.41"
tabulate = "^0.9.0"
termcolor = "^2.3.0"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gptsql = 'gptsql.__main__:main'
